refactor(back): Refactor schedule and routine creation logic