@@ -11,11 +11,10 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Builder(access = AccessLevel.PRIVATE)
-public class TaskCreateResponse {
+public class RoutineCreateResponse {
 
     private Long taskId;
     private String taskType;
@@ -31,7 +30,7 @@ public class TaskCreateResponse {
     private LocalTime endTime;
     private Boolean isImportant;
 
-    // 반복
+    // 반복 (루틴 전용)
     private String repeatType;
     private LocalDate repeatEndDate;
     private List<String> repeatDaysOfWeek;
@@ -39,6 +38,7 @@ public class TaskCreateResponse {
 
     // 공통
     private Integer notificationMinutes;
+    private LocalDateTime notificationAt;
     private Boolean isPublic;
 
     // 성장
@@ -53,28 +53,20 @@ public class TaskCreateResponse {
     private LocalDateTime createdAt;
     private LocalDateTime updatedAt;
 
-    public static TaskCreateResponse from(Task task) {
-        return TaskCreateResponse.builder()
+    public static RoutineCreateResponse from(Task task) {
+        return RoutineCreateResponse.builder()
                 .taskId(task.getId())
                 .taskType(task.getTaskType().name())
                 .title(task.getTitle())
                 .memo(task.getMemo())
                 .category(task.getCategory() != null ? task.getCategory().name() : null)
-                .isAllDay(task.isAllDay())
                 .startDate(task.getStartDate())
-                .startTime(task.getStartTime())
-                .endDate(task.getEndDate())
-                .endTime(task.getEndTime())
-                .isImportant(task.isImportant())
                 .repeatType(task.getRepeatType() != null ? task.getRepeatType().name() : RepeatType.NONE.name())
                 .repeatEndDate(task.getRepeatEndDate())
-                .repeatDaysOfWeek(
-                        task.getRepeatDaysOfWeek().stream()
-                                .map(DayOfWeek::name)
-                                .collect(Collectors.toList())
-                )
+                .repeatDaysOfWeek(task.getRepeatDaysOfWeek().stream().map(DayOfWeek::name).toList())
                 .repeatDaysOfMonth(List.copyOf(task.getRepeatDaysOfMonth()))
                 .notificationMinutes(task.getNotificationMinutes())
+                .notificationAt(task.getNotificationAt())
                 .isPublic(task.isPublic())
                 .growthValue(task.getGrowthValue())
                 .growthType(task.getGrowthType() != null ? task.getGrowthType().name() : null)
